// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PadRight[(0,5),(1,2)] DOUBLE [Simple 2x2] 1`] = `
[
  "╔═════════════╦══════════╗",
  "║Cell 1-1     ║Cell 2-1  ║",
  "╠═════════════╬══════════╣",
  "║Cell 1-2     ║Cell 2-2  ║",
  "╚═════════════╩══════════╝",
]
`;

exports[`PadRight[(0,5),(1,2)] HORIZONTAL_DOUBLE_VERTICAL_THIN [Simple 2x2] 1`] = `
[
  "╒═════════════╤══════════╕",
  "│Cell 1-1     │Cell 2-1  │",
  "╞═════════════╪══════════╡",
  "│Cell 1-2     │Cell 2-2  │",
  "╘═════════════╧══════════╛",
]
`;

exports[`PadRight[(0,5),(1,2)] HORIZONTAL_THICK_VERTICAL_THIN [Simple 2x2] 1`] = `
[
  "┍━━━━━━━━━━━━━┯━━━━━━━━━━┑",
  "│Cell 1-1     │Cell 2-1  │",
  "┝━━━━━━━━━━━━━┿━━━━━━━━━━┥",
  "│Cell 1-2     │Cell 2-2  │",
  "┕━━━━━━━━━━━━━┷━━━━━━━━━━┙",
]
`;

exports[`PadRight[(0,5),(1,2)] HORIZONTAL_THIN_VERTICAL_DOUBLE [Simple 2x2] 1`] = `
[
  "╓─────────────╥──────────╖",
  "║Cell 1-1     ║Cell 2-1  ║",
  "╟─────────────╫──────────╢",
  "║Cell 1-2     ║Cell 2-2  ║",
  "╙─────────────╨──────────╜",
]
`;

exports[`PadRight[(0,5),(1,2)] HORIZONTAL_THIN_VERTICAL_THICK [Simple 2x2] 1`] = `
[
  "┎─────────────┰──────────┒",
  "┃Cell 1-1     ┃Cell 2-1  ┃",
  "┠─────────────╂──────────┨",
  "┃Cell 1-2     ┃Cell 2-2  ┃",
  "┖─────────────┸──────────┚",
]
`;

exports[`PadRight[(0,5),(1,2)] INNER_DOUBLE_OUTER_THIN [Simple 2x2] 1`] = `
[
  "┌─────────────╥──────────┐",
  "│Cell 1-1     ║Cell 2-1  │",
  "╞═════════════╬══════════╡",
  "│Cell 1-2     ║Cell 2-2  │",
  "└─────────────╨──────────┘",
]
`;

exports[`PadRight[(0,5),(1,2)] INNER_DOUBLE_OUTER_THIN_CURVE [Simple 2x2] 1`] = `
[
  "╭─────────────╥──────────╮",
  "│Cell 1-1     ║Cell 2-1  │",
  "╞═════════════╬══════════╡",
  "│Cell 1-2     ║Cell 2-2  │",
  "╰─────────────╨──────────╯",
]
`;

exports[`PadRight[(0,5),(1,2)] INNER_THICK_OUTER_THIN [Simple 2x2] 1`] = `
[
  "┌─────────────┰──────────┐",
  "│Cell 1-1     ┃Cell 2-1  │",
  "┝━━━━━━━━━━━━━╋━━━━━━━━━━┥",
  "│Cell 1-2     ┃Cell 2-2  │",
  "└─────────────┸──────────┘",
]
`;

exports[`PadRight[(0,5),(1,2)] INNER_THICK_OUTER_THIN_CURVE [Simple 2x2] 1`] = `
[
  "╭─────────────┰──────────╮",
  "│Cell 1-1     ┃Cell 2-1  │",
  "┝━━━━━━━━━━━━━╋━━━━━━━━━━┥",
  "│Cell 1-2     ┃Cell 2-2  │",
  "╰─────────────┸──────────╯",
]
`;

exports[`PadRight[(0,5),(1,2)] INNER_THIN_OUTER_DOUBLE [Simple 2x2] 1`] = `
[
  "╔═════════════╤══════════╗",
  "║Cell 1-1     │Cell 2-1  ║",
  "╟─────────────┼──────────╢",
  "║Cell 1-2     │Cell 2-2  ║",
  "╚═════════════╧══════════╝",
]
`;

exports[`PadRight[(0,5),(1,2)] INNER_THIN_OUTER_THICK [Simple 2x2] 1`] = `
[
  "┏━━━━━━━━━━━━━┯━━━━━━━━━━┓",
  "┃Cell 1-1     │Cell 2-1  ┃",
  "┠─────────────┼──────────┨",
  "┃Cell 1-2     │Cell 2-2  ┃",
  "┗━━━━━━━━━━━━━┷━━━━━━━━━━┛",
]
`;

exports[`PadRight[(0,5),(1,2)] THICK [Simple 2x2] 1`] = `
[
  "┏━━━━━━━━━━━━━┳━━━━━━━━━━┓",
  "┃Cell 1-1     ┃Cell 2-1  ┃",
  "┣━━━━━━━━━━━━━╋━━━━━━━━━━┫",
  "┃Cell 1-2     ┃Cell 2-2  ┃",
  "┗━━━━━━━━━━━━━┻━━━━━━━━━━┛",
]
`;

exports[`PadRight[(0,5),(1,2)] THIN [Simple 2x2] 1`] = `
[
  "┌─────────────┬──────────┐",
  "│Cell 1-1     │Cell 2-1  │",
  "├─────────────┼──────────┤",
  "│Cell 1-2     │Cell 2-2  │",
  "└─────────────┴──────────┘",
]
`;

exports[`PadRight[(0,5),(1,2)] THINCURVE [Simple 2x2] 1`] = `
[
  "╭─────────────┬──────────╮",
  "│Cell 1-1     │Cell 2-1  │",
  "├─────────────┼──────────┤",
  "│Cell 1-2     │Cell 2-2  │",
  "╰─────────────┴──────────╯",
]
`;
